--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-pandas
-numpy
-opencv-python
-Pillow
-ultralytics
+streamlit==1.34.0
+pandas==2.2.2
+numpy==1.26.4
+opencv-python==4.9.0.80
+Pillow==10.3.0
+ultralytics==8.3.105
+torch==2.5.1
